--- a/week2/2-2.ipynb
+++ b/week2/2-2.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-27T09:50:41.241198Z",
-     "start_time": "2024-08-27T09:50:32.443054Z"
+     "end_time": "2024-08-27T11:50:15.151577Z",
+     "start_time": "2024-08-27T11:50:11.801983Z"
     }
    },
    "cell_type": "code",
@@ -61,9 +61,6 @@
     "cv2.createTrackbar('Filter Size', 'image', filter_size, 5, update_img)\n",
     "cv2.createTrackbar('Direction', 'image', direction, 3, update_img)\n",
     "\n",
-    "# 生成浮雕图像\n",
-    "new_img = update_img(0)\n",
-    "\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()\n"
    ],
@@ -76,36 +73,53 @@
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31merror\u001B[0m                                     Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[19], line 12\u001B[0m, in \u001B[0;36mupdate_img\u001B[1;34m(val)\u001B[0m\n\u001B[0;32m     10\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mupdate_img\u001B[39m(val):\n\u001B[0;32m     11\u001B[0m     \u001B[38;5;28;01mglobal\u001B[39;00m direction, filter_size, src_img\n\u001B[1;32m---> 12\u001B[0m     direction \u001B[38;5;241m=\u001B[39m \u001B[43mcv2\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mgetTrackbarPos\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mDirection\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mimage\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m     13\u001B[0m     filter_size \u001B[38;5;241m=\u001B[39m cv2\u001B[38;5;241m.\u001B[39mgetTrackbarPos(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mFilter Size\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mimage\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m     15\u001B[0m     \u001B[38;5;66;03m# 定义不同 size 下的卷积核方向\u001B[39;00m\n",
+      "Cell \u001B[1;32mIn[23], line 12\u001B[0m, in \u001B[0;36mupdate_img\u001B[1;34m(val)\u001B[0m\n\u001B[0;32m     10\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mupdate_img\u001B[39m(val):\n\u001B[0;32m     11\u001B[0m     \u001B[38;5;28;01mglobal\u001B[39;00m direction, filter_size, src_img\n\u001B[1;32m---> 12\u001B[0m     direction \u001B[38;5;241m=\u001B[39m \u001B[43mcv2\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mgetTrackbarPos\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mDirection\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mimage\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m     13\u001B[0m     filter_size \u001B[38;5;241m=\u001B[39m cv2\u001B[38;5;241m.\u001B[39mgetTrackbarPos(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mFilter Size\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mimage\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m     15\u001B[0m     \u001B[38;5;66;03m# 定义不同 size 下的卷积核方向\u001B[39;00m\n",
       "\u001B[1;31merror\u001B[0m: OpenCV(4.10.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:868: error: (-215:Assertion failed) trackbar in function 'cv::getTrackbarPos'\n"
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-27T09:37:12.133731Z",
-     "start_time": "2024-08-27T09:37:00.462395Z"
+     "end_time": "2024-08-27T12:33:00.303315Z",
+     "start_time": "2024-08-27T12:32:49.430675Z"
     }
    },
    "cell_type": "code",
-   "source": "",
-   "id": "14b5072a0be17ca3",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
+   "source": [
+    "src_img1 = cv2.imread('./input/apple.jpg')\n",
+    "\n",
+    "def generate_sketch(val):\n",
+    "    global src_img1\n",
+    "    if val == 0:\n",
+    "        gray_img = cv2.cvtColor(src_img1, cv2.COLOR_BGR2GRAY)\n",
+    "        anti_gray_img = 255-gray_img\n",
+    "        blur_img = cv2.GaussianBlur(anti_gray_img,(49,49),0)\n",
+    "        inverted_blur_img = 255-blur_img\n",
+    "        dst_sketch = cv2.divide(gray_img, inverted_blur_img, scale=256.0)\n",
+    "    elif val == 1:\n",
+    "        dst_sketch,dst_color = cv2.pencilSketch(src_img1, sigma_s=60, sigma_r=0.07, shade_factor=0.05)\n",
+    "    else:\n",
+    "        gray_img = cv2.cvtColor(src_img1, cv2.COLOR_BGR2GRAY)\n",
+    "        gray_img = cv2.medianBlur(gray_img,7)\n",
+    "        edges = cv2.Laplacian(gray_img, cv2.CV_8U ,ksize=5)\n",
+    "        ret, mask = cv2.threshold(edges, 100, 255, cv2.THRESH_BINARY_INV)\n",
+    "        dst_sketch = mask\n",
+    "    sketch_img = cv2.cvtColor(dst_sketch, cv2.COLOR_GRAY2BGR)\n",
+    "    result = np.hstack((src_img1, sketch_img))\n",
+    "    cv2.imshow('image', result)\n",
+    "\n",
+    "cv2.namedWindow('image', cv2.WINDOW_NORMAL)\n",
+    "cv2.createTrackbar('Direction', 'image', 1, 2, generate_sketch)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "    "
    ],
-   "execution_count": 12
+   "id": "14b5072a0be17ca3",
+   "outputs": [],
+   "execution_count": 74
   },
   {
    "metadata": {},
@@ -113,7 +127,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "3637cbdaeba0c2cb"
+   "id": "45e6e4cb0bc770a9"
   }
  ],
  "metadata": {
