--- a/week2/2-2.1.ipynb
+++ b/week2/2-2.1.ipynb
@@ -1,16 +1,23 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "实现图像浮雕，卷积核大小为3,5",
+   "id": "c772dd443f30725e"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-27T11:50:15.151577Z",
-     "start_time": "2024-08-27T11:50:11.801983Z"
+     "end_time": "2024-09-02T13:06:35.445235Z",
+     "start_time": "2024-09-02T13:06:16.630396Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import cv2\n",
     "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
     "\n",
     "# 初始化方向和大小\n",
     "direction = 1\n",
@@ -73,18 +80,24 @@
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31merror\u001B[0m                                     Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[23], line 12\u001B[0m, in \u001B[0;36mupdate_img\u001B[1;34m(val)\u001B[0m\n\u001B[0;32m     10\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mupdate_img\u001B[39m(val):\n\u001B[0;32m     11\u001B[0m     \u001B[38;5;28;01mglobal\u001B[39;00m direction, filter_size, src_img\n\u001B[1;32m---> 12\u001B[0m     direction \u001B[38;5;241m=\u001B[39m \u001B[43mcv2\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mgetTrackbarPos\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mDirection\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mimage\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m     13\u001B[0m     filter_size \u001B[38;5;241m=\u001B[39m cv2\u001B[38;5;241m.\u001B[39mgetTrackbarPos(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mFilter Size\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mimage\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m     15\u001B[0m     \u001B[38;5;66;03m# 定义不同 size 下的卷积核方向\u001B[39;00m\n",
+      "Cell \u001B[1;32mIn[6], line 13\u001B[0m, in \u001B[0;36mupdate_img\u001B[1;34m(val)\u001B[0m\n\u001B[0;32m     11\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mupdate_img\u001B[39m(val):\n\u001B[0;32m     12\u001B[0m     \u001B[38;5;28;01mglobal\u001B[39;00m direction, filter_size, src_img\n\u001B[1;32m---> 13\u001B[0m     direction \u001B[38;5;241m=\u001B[39m \u001B[43mcv2\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mgetTrackbarPos\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mDirection\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mimage\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m     14\u001B[0m     filter_size \u001B[38;5;241m=\u001B[39m cv2\u001B[38;5;241m.\u001B[39mgetTrackbarPos(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mFilter Size\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mimage\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m     16\u001B[0m     \u001B[38;5;66;03m# 定义不同 size 下的卷积核方向\u001B[39;00m\n",
       "\u001B[1;31merror\u001B[0m: OpenCV(4.10.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:868: error: (-215:Assertion failed) trackbar in function 'cv::getTrackbarPos'\n"
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 6
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "用多种方法生成草图",
+   "id": "55102f739ea82a04"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-27T12:33:00.303315Z",
-     "start_time": "2024-08-27T12:32:49.430675Z"
+     "end_time": "2024-09-02T12:34:42.652478Z",
+     "start_time": "2024-09-02T12:34:35.473987Z"
     }
    },
    "cell_type": "code",
@@ -119,7 +132,7 @@
    ],
    "id": "14b5072a0be17ca3",
    "outputs": [],
-   "execution_count": 74
+   "execution_count": 2
   },
   {
    "metadata": {},
